feat: prevent folder removal and allow widgets to be removed

--- a/res/layout/drop_target_bar.xml
+++ b/res/layout/drop_target_bar.xml
@@ -23,14 +23,14 @@
     android:visibility="invisible">
 
     <!-- Delete target -->
-    <!-- <com.android.launcher3.DeleteDropTarget
+    <com.android.launcher3.DeleteDropTarget
         android:id="@+id/delete_target_text"
         style="@style/DropTargetButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
-        android:text="@string/remove_drop_target_label" /> -->
+        android:text="@string/remove_drop_target_label" />
 
     <!-- Uninstall target -->
     <com.android.launcher3.SecondaryDropTarget
